Added default font styles

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 @media all {
-
+    body {font: 400px 14px/1.3 Roboto, sans-serif; color: #000;}
 }
 
 @media screen {
@@ -19,5 +19,5 @@
 }
 
 @media print {
-    
+
 }
