--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,12 @@
 @media all {
     body {font: 400px 14px/1.3 Roboto, sans-serif; color: #000;}
+    .container {width: 1000px; margin: 0 auto;}
 }
 
 @media screen {
-    header {background: url(../layout2-assets/hero-image-greece.webp) top center no-repeat; min-height: 527px; width: 100%;}
+    
+    header {background: url(../layout2-assets/hero-image-greece.webp) top center no-repeat; min-height: 527px; width: 100%; position: relative; left: 0}
+    header a {background: url(../layout2-assets/go-greek-tours.png) top center no-repeat; min-height: 92px; width: 107px; position: absolute; left: 10px; top: 10px;}
 }
 
 @media screen and (max-width: 1010px) {
