--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
     header {background: url(../layout2-assets/hero-image-greece.webp) top center no-repeat; min-height: 527px; width: 100%; position: relative; left: 0}
     #logo {background: url(../layout2-assets/go-greek-tours.png) top center no-repeat; min-height: 92px; width: 107px; position: absolute; left: 10px; top: 10px;}
     #logo:focus {border-color: #fff;}
+    header h1 {font: 40px/1.3 'Roboto Slab', serif; color: #00214f; margin: 0 auto; position: relative; top: 320px; width: 90%; text-align: center;}
 }
 
 @media screen and (max-width: 1010px) {
