--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,11 @@
     #logo {background: url(../layout2-assets/go-greek-tours.png) top center no-repeat; min-height: 92px; width: 107px; position: absolute; left: 10px; top: 10px;}
     #logo:focus {border-color: #fff;}
     header h1 {font: 40px/1.3 'Roboto Slab', serif; color: #00214f; margin: 0 auto; position: relative; top: 320px; width: 90%; text-align: center;}
+    header form {position: relative; top: 330px; width: 100%; display: flex; justify-content: center;}
+    header input, header button {font: 16px/1.3 'Roboto Slab', serif; border-radius: 0; border: 0;}
+    header input {top: 10px; height: 40px; width: 36%; padding: 0 10px; box-sizing: border-box;}
+    header:focus {border: 2px solid #fff;}
+    header button {padding: 0 30px;}
 }
 
 @media screen and (max-width: 1010px) {
