--- a/css/main.css
+++ b/css/main.css
@@ -5,15 +5,16 @@
 
 @media screen {
     
+    /* Masthead */ 
     header {background: url(../layout2-assets/hero-image-greece.webp) top center no-repeat; min-height: 527px; width: 100%; position: relative; left: 0}
     #logo {background: url(../layout2-assets/go-greek-tours.png) top center no-repeat; min-height: 92px; width: 107px; position: absolute; left: 10px; top: 10px;}
     #logo:focus {border-color: #fff;}
     header h1 {font: 40px/1.3 'Roboto Slab', serif; color: #00214f; margin: 0 auto; position: relative; top: 320px; width: 90%; text-align: center;}
     header form {position: relative; top: 330px; width: 100%; display: flex; justify-content: center;}
-    header input, header button {font: 16px/1.3 'Roboto Slab', serif; border-radius: 0; border: 0;}
-    header input {top: 10px; height: 40px; width: 36%; padding: 0 10px; box-sizing: border-box;}
-    header:focus {border: 2px solid #fff;}
-    header button {padding: 0 30px;}
+    header input, header button {font: 16px/1.3 'Roboto Slab', serif; border-radius: 0; border: 0; height: 40px;}
+    header input {top: 10px; width: 36%; padding: 0 10px; box-sizing: border-box;}
+    header input:focus, header button:focus {border: 2px solid #fff;}
+    header button {padding: 0 30px; background-color: #00214F; color: #fff;}
 }
 
 @media screen and (max-width: 1010px) {
