--- a/css/main.css
+++ b/css/main.css
@@ -4,10 +4,13 @@
 }
 
 @media screen {
+
+    /* General */
+    .image {background-position: top center; background-repeat: no-repeat; background-size: cover;}
     
     /* Masthead */ 
-    header {background: url(../layout2-assets/hero-image-greece.webp) top center no-repeat; min-height: 527px; width: 100%; position: relative; left: 0}
-    #logo {background: url(../layout2-assets/go-greek-tours.png) top center no-repeat; min-height: 92px; width: 107px; position: absolute; left: 10px; top: 10px;}
+    header {background-image: url(../layout2-assets/hero-image-greece.webp); min-height: 527px; width: 100%; position: relative; left: 0}
+    #logo {background-image: url(../layout2-assets/go-greek-tours.png); min-height: 92px; width: 107px; position: absolute; left: 10px; top: 10px;}
     #logo:focus {border-color: #fff;}
     header h1 {font: 40px/1.3 'Roboto Slab', serif; color: #00214f; margin: 0 auto; position: relative; top: 320px; width: 90%; text-align: center;}
     header form {position: relative; top: 330px; width: 100%; display: flex; justify-content: center;}
@@ -15,6 +18,14 @@
     header input {top: 10px; width: 36%; padding: 0 10px; box-sizing: border-box;}
     header input:focus, header button:focus {border: 2px solid #fff;}
     header button {padding: 0 30px; background-color: #00214F; color: #fff;}
+
+    /* Greek History */
+    .greekHistory {display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 0 15px; padding: 80px 110px;}
+    .greekHistory .subGrid {display: grid; grid-template-rows: 200px repeat(2, 1fr);}
+    #greekHistoryPhoto {background-image: url(../layout2-assets/greek-history.webp);}
+    #santoriniPhoto {background-image: url(../layout2-assets/santorini.webp);}
+    #monasteryPhoto {background-image: url(../layout2-assets/greek-monastery.webp);}
+
 }
 
 @media screen and (max-width: 1010px) {
