--- a/css/main.css
+++ b/css/main.css
@@ -20,14 +20,15 @@
     header button {padding: 0 30px; background-color: #00214F; color: #fff;}
 
     /* Greek History */
-    .greekHistory {display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 0 15px; padding: 80px 110px 85px; background-color: #EDF3EF;}
-    .greekHistory .subGrid {display: grid; grid-template-rows: 200px repeat(3, 0.25fr); text-align: center; gap: 11px 0;}
+    .greekHistory {display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 0 15px; padding: 80px 110px; background-color: #EDF3EF;}
+    .greekHistory div {text-align: center;}
+    .greekHistory .image {display: block; min-height: 200px;}
     #greekHistoryPhoto {background-image: url(../layout2-assets/greek-history.webp);}
     #santoriniPhoto {background-image: url(../layout2-assets/santorini.webp);}
     #monasteryPhoto {background-image: url(../layout2-assets/greek-monastery.webp);}
-    .greekHistory h2 {color: #666; font: 700 16px/1.3 'Roboto Slab', serif;}
-    .greekHistory p {padding: 0 18px; margin-top: -12px;}
-    .greekHistory img {margin: -11px auto 0;}
+    .greekHistory h2 {color: #666; font: 700 16px/1.3 'Roboto Slab', serif; margin-top: 24px;}
+    .greekHistory p {padding: 0 18px; margin: 0;}
+    .greekHistory img {margin: 15px auto;}
 }
 
 @media screen and (max-width: 1010px) {
