--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,10 @@
     .greekHistory h2 {color: #666; font: 700 16px/1.3 'Roboto Slab', serif; margin-top: 24px;}
     .greekHistory p {padding: 0 18px; margin: 0;}
     .greekHistory img {margin: 15px auto;}
+
+    /* Quote */
+    .quote blockquote {color: #666; font: 700 34px/1.3 'Arima Madurai'; width: 80%; padding: 80px 0; text-align: center; margin: 0 auto;}
+    .quote span {font-size: 18px;}
 }
 
 @media screen and (max-width: 1010px) {
