--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,11 @@
     /* Quote */
     .quote blockquote {color: #666; font: 700 34px/1.3 'Arima Madurai'; width: 80%; padding: 80px 0; text-align: center; margin: 0 auto;}
     .quote span {font-size: 18px;}
+
+    /* Explore Cafe Culture */
+    .exploreCafe {background-image: url(../layout2-assets/cafe-culture.webp); min-height: 543px; position: relative;}
+    .exploreCafe h2 {background-color: #987B31; color: #fff; font: 400 26px/1.3 'Arima Madurai', cursive; width: 200px; padding: 20px 0; position: absolute; top: 220px; right: 80px; text-align: center; margin: 0;}
+    .exploreCafe h2:hover, .exploreCafe h2:focus {background-color: #000;}
 }
 
 @media screen and (max-width: 1010px) {
