--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 @media all {
-    body {font: 400px 14px/1.3 Roboto, sans-serif; color: #000;}
+    body {font: 400 14px/1.3 'Roboto', sans-serif; color: #000;}
     .container {width: 1000px; margin: 0 auto;}
 }
 
@@ -38,6 +38,11 @@
     .exploreCafe {background-image: url(../layout2-assets/cafe-culture.webp); min-height: 543px; position: relative;}
     .exploreCafe h2 {background-color: #987B31; color: #fff; font: 400 26px/1.3 'Arima Madurai', cursive; width: 200px; padding: 20px 0; position: absolute; top: 220px; right: 80px; text-align: center; margin: 0;}
     .exploreCafe h2:hover, .exploreCafe h2:focus {background-color: #000;}
+
+    /* Travel smart */
+    .travelSmart {display: grid; grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); gap: 30px 15px; background-color: #448CCB; padding: 80px 110px;}
+    .travelSmart h2 {grid-column: 1 / 5; color: #fff; font: 400 34px/1.3 'Roboto Slab', serif; margin: 0;}
+    .travelSmart a {padding: 40px; color: #1D6BAE; font-size: 22px; background-color: #fff; text-align: center; text-decoration: none;}
 }
 
 @media screen and (max-width: 1010px) {
