--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,21 @@
     .travelSmart {display: grid; grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); gap: 30px 15px; background-color: #448CCB; padding: 80px 110px;}
     .travelSmart h2 {grid-column: 1 / 5; color: #fff; font: 400 34px/1.3 'Roboto Slab', serif; margin: 0;}
     .travelSmart a {padding: 40px; color: #1D6BAE; font-size: 22px; background-color: #fff; text-align: center; text-decoration: none;}
+
+    /* Footer */
+    footer {display: grid; grid-template-columns: 1.5fr 2fr 1fr; padding: 80px 110px;}
+    footer h2 {color: #666; font: 400 22px/1.3 'Arima Madurai', cursive; margin: 0 0 0.5em;}
+    footer ul {list-style-type: none; padding: 0; margin: 0;}
+    footer li {margin-bottom: 1em;}
+    footer ul a {text-decoration: none; color: #666;}
+    footer ul a:hover, footer ul a:focus {color: #000;}
+    footer input[type*="email"] {border: 1px solid #000; padding: 5px; width: 96.5%;}
+    footer input[type*="email"]:focus {border: 2px solid #000;}
+    footer input[type*="submit"] {color: #fff; background-color: #448CCB; padding: 5px 15px; cursor: pointer; margin-top: 13px; border: 1px solid black;}
+    footer input[type*="submit"]:hover, footer input[type*="submit"]:focus {background-color: #000;}
+    .socialMedia {text-align: right; display: grid; justify-content: right; grid-template-rows: repeat(2, 1fr); gap: 20px 0;}
+    .socialMedia a {background-image: url(../layout2-assets/twitter-logo.png); max-height: 50px; display: block; width: 60px; justify-self: end; margin: 0;} 
+    .socialMedia p {margin: 0;}
 }
 
 @media screen and (max-width: 1010px) {
