--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,13 @@
 }
 
 @media screen and (max-width: 1010px) {
-
+    
+    .container {width: 100%;}
+    .greekHistory, .travelSmart, footer {padding-left: 50px; padding-right: 50px;}
+    .travelSmart {padding-bottom: 75px;}
+    .travelSmart {grid-template-columns: repeat(2, 1fr); grid-template-rows: auto repeat(2, 1fr); gap: 22px 30px;}
+    .travelSmart h2 {grid-column: 1/3; margin-bottom: 3px;}
+    .travelSmart a {padding-left: 0; padding-right: 0;}
 }
 
 @media screen and (max-width: 800px) {
