--- a/css/main.css
+++ b/css/main.css
@@ -61,16 +61,24 @@
 }
 
 @media screen and (max-width: 1010px) {
-    
+
     .container {width: 100%;}
     .greekHistory, .travelSmart, footer {padding-left: 50px; padding-right: 50px;}
     .travelSmart {padding-bottom: 75px;}
     .travelSmart {grid-template-columns: repeat(2, 1fr); grid-template-rows: auto repeat(2, 1fr); gap: 22px 30px;}
     .travelSmart h2 {grid-column: 1/3; margin-bottom: 3px;}
     .travelSmart a {padding-left: 0; padding-right: 0;}
+    
 }
 
 @media screen and (max-width: 800px) {
+
+    .greekHistory, .travelSmart, footer {padding-left: 46px; padding-right: 46px;}
+    .greekHistory {row-gap: 15px;}
+    footer {grid-template-columns: 1fr; grid-template-rows: repeat(3, 1fr); gap: 40px 0;}
+    footer input[type*="email"] {width: 98%;}
+    .socialMedia {justify-content: left; margin-top: -9px; gap: 12px 0;}
+    .socialMedia a {justify-self: left;}
 
 }
 
