--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@
     .travelSmart {grid-template-columns: repeat(2, 1fr); grid-template-rows: auto repeat(2, 1fr); gap: 22px 30px;}
     .travelSmart h2 {grid-column: 1/3; margin-bottom: 3px;}
     .travelSmart a {padding-left: 0; padding-right: 0;}
-    
+
 }
 
 @media screen and (max-width: 800px) {
@@ -84,6 +84,13 @@
 
 @media screen and (max-width: 600px) {
 
+    header input {width: 63%;}
+    .greekHistory, .travelSmart, footer {padding-top: 50px; padding-bottom: 50px;}
+    .exploreCafe {display: grid; grid-template-rows: auto; justify-content: center; align-content: center;}
+    .exploreCafe h2 {position: static;}
+    .travelSmart {grid-template-columns: 1fr; grid-template-rows: auto repeat(4, 1fr); padding-bottom: 45px;}
+    .travelSmart h2 {grid-column: 1 / 2;}
+    
 }
 
 @media print {
