--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,8 @@
 
     /* Explore Cafe Culture */
     .exploreCafe {background-image: url(../layout2-assets/cafe-culture.webp); min-height: 543px; position: relative;}
-    .exploreCafe h2 {background-color: #987B31; color: #fff; font: 400 26px/1.3 'Arima Madurai', cursive; width: 200px; padding: 20px 0; position: absolute; top: 220px; right: 80px; text-align: center; margin: 0;}
+    .exploreCafe h2 {background-color: #987B31; padding: 20px 0; position: absolute; top: 220px; right: 80px; text-align: center; margin: 0; width: 200px;}
+    .exploreCafe a {color: #fff; font: 400 26px/1.3 'Arima Madurai', cursive; text-decoration: none;}
     .exploreCafe h2:hover, .exploreCafe h2:focus {background-color: #000;}
 
     /* Travel smart */
@@ -90,9 +91,14 @@
     .exploreCafe h2 {position: static;}
     .travelSmart {grid-template-columns: 1fr; grid-template-rows: auto repeat(4, 1fr); padding-bottom: 45px;}
     .travelSmart h2 {grid-column: 1 / 2;}
-    
+
 }
 
 @media print {
+    h1, input, button, img, .greekToursNav, .mailList {display: none;}
 
+    body {font-size: 17pt;}
+    h2 {font-size: 24pt;}
+    a {color: #000; text-decoration: underline;}
+    .travelSmart a:nth-child(n) {display: block; margin-bottom: 20pt;}
 }
