--- a/css/main.css
+++ b/css/main.css
@@ -20,15 +20,15 @@
     header button {padding: 0 30px; background-color: #00214F; color: #fff;}
 
     /* Greek History */
-    .greekHistory {display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 0 15px; padding: 80px 110px; background-color: #EDF3EF;}
-    .greekHistory div {text-align: center;}
-    .greekHistory .image {display: block; min-height: 200px;}
+    .tours {display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 0 15px; padding: 80px 110px; background-color: #EDF3EF;}
+    .tours section {text-align: center;}
+    .tours .image {display: block; min-height: 200px;}
     #greekHistoryPhoto {background-image: url(../layout2-assets/greek-history.webp);}
     #santoriniPhoto {background-image: url(../layout2-assets/santorini.webp);}
     #monasteryPhoto {background-image: url(../layout2-assets/greek-monastery.webp);}
-    .greekHistory h2 {color: #666; font: 700 16px/1.3 'Roboto Slab', serif; margin-top: 24px;}
-    .greekHistory p {padding: 0 18px; margin: 0;}
-    .greekHistory img {margin: 15px auto;}
+    .tours h2 {color: #666; font: 700 16px/1.3 'Roboto Slab', serif; margin-top: 24px;}
+    .tours p {padding: 0 18px; margin: 0;}
+    .tours img {margin: 15px auto;}
 
     /* Quote */
     .quote blockquote {color: #666; font: 700 34px/1.3 'Arima Madurai'; width: 80%; padding: 80px 0; text-align: center; margin: 0 auto;}
@@ -64,7 +64,7 @@
 @media screen and (max-width: 1010px) {
 
     .container {width: 100%;}
-    .greekHistory, .travelSmart, footer {padding-left: 50px; padding-right: 50px;}
+    .tours, .travelSmart, footer {padding-left: 50px; padding-right: 50px;}
     .travelSmart {padding-bottom: 75px;}
     .travelSmart {grid-template-columns: repeat(2, 1fr); grid-template-rows: auto repeat(2, 1fr); gap: 22px 30px;}
     .travelSmart h2 {grid-column: 1/3; margin-bottom: 3px;}
@@ -74,8 +74,8 @@
 
 @media screen and (max-width: 800px) {
 
-    .greekHistory, .travelSmart, footer {padding-left: 46px; padding-right: 46px;}
-    .greekHistory {row-gap: 15px;}
+    .tours, .travelSmart, footer {padding-left: 46px; padding-right: 46px;}
+    .tours {row-gap: 15px;}
     footer {grid-template-columns: 1fr; grid-template-rows: repeat(3, 1fr); gap: 40px 0;}
     footer input[type*="email"] {width: 98%;}
     .socialMedia {justify-content: left; margin-top: -9px; gap: 12px 0;}
@@ -86,7 +86,7 @@
 @media screen and (max-width: 600px) {
 
     header input {width: 63%;}
-    .greekHistory, .travelSmart, footer {padding-top: 50px; padding-bottom: 50px;}
+    .tours, .travelSmart, footer {padding-top: 50px; padding-bottom: 50px;}
     .exploreCafe {display: grid; grid-template-rows: auto; justify-content: center; align-content: center;}
     .exploreCafe h2 {position: static;}
     .travelSmart {grid-template-columns: 1fr; grid-template-rows: auto repeat(4, 1fr); padding-bottom: 45px;}
