--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
 
     /* General */
     .image {background-position: top center; background-repeat: no-repeat; background-size: cover;}
+    a {text-decoration: none;}
     a:focus {outline: 2px dotted #000; outline-offset: 5px;}
     
     /* Masthead */ 
@@ -37,21 +38,21 @@
 
     /* Explore Cafe Culture */
     .exploreCafe {background-image: url(../layout2-assets/cafe-culture.webp); min-height: 543px; position: relative;}
-    .exploreCafe h2 {background-color: #987B31; padding: 20px 0; position: absolute; top: 220px; right: 80px; text-align: center; margin: 0; width: 200px;}
-    .exploreCafe a {color: #fff; font: 400 26px/1.3 'Arima Madurai', cursive; text-decoration: none;}
-    .exploreCafe h2:hover, .exploreCafe h2:focus {background-color: #000;}
+    .exploreCafe a {background-color: #987B31; padding: 20px 0; position: absolute; top: 220px; right: 80px; text-align: center; width: 200px;}
+    .exploreCafe a h2 {color: #fff; font: 400 26px/1.3 'Arima Madurai', cursive; margin: 0;}
+    .exploreCafe a:hover, .exploreCafe a:focus {background-color: #000;}
 
     /* Travel smart */
     .travelSmart {display: grid; grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); gap: 30px 15px; background-color: #448CCB; padding: 80px 110px;}
     .travelSmart h2 {grid-column: 1 / 5; color: #fff; font: 400 34px/1.3 'Roboto Slab', serif; margin: 0;}
-    .travelSmart a {padding: 40px; color: #1D6BAE; font-size: 22px; background-color: #fff; text-align: center; text-decoration: none;}
+    .travelSmart a {padding: 40px; color: #1D6BAE; font-size: 22px; background-color: #fff; text-align: center;}
 
     /* Footer */
     footer {display: grid; grid-template-columns: 1.5fr 2fr 1fr; padding: 80px 110px;}
     footer h2 {color: #666; font: 400 22px/1.3 'Arima Madurai', cursive; margin: 0 0 0.5em;}
     footer ul {list-style-type: none; padding: 0; margin: 0;}
     footer li {margin-bottom: 1em;}
-    footer ul a {text-decoration: none; color: #666;}
+    footer ul a {color: #666;}
     footer ul a:hover, footer ul a:focus {color: #000;}
     footer input[type*="email"] {border: 1px solid #000; padding: 5px; width: 96.5%;}
     footer input[type*="email"]:focus {border: 2px solid #000;}
@@ -89,7 +90,7 @@
     header input {width: 63%;}
     .tours, .travelSmart, footer {padding-top: 50px; padding-bottom: 50px;}
     .exploreCafe {display: grid; grid-template-rows: auto; justify-content: center; align-content: center;}
-    .exploreCafe h2 {position: static;}
+    .exploreCafe a {position: static;}
     .travelSmart {grid-template-columns: 1fr; grid-template-rows: auto repeat(4, 1fr); padding-bottom: 45px;}
     .travelSmart h2 {grid-column: 1 / 2;}
 
