--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,7 @@
     .travelSmart {display: grid; grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); gap: 30px 15px; background-color: #448CCB; padding: 80px 110px;}
     .travelSmart h2 {grid-column: 1 / 5; color: #fff; font: 400 34px/1.3 'Roboto Slab', serif; margin: 0;}
     .travelSmart a {padding: 40px; color: #1D6BAE; font-size: 22px; background-color: #fff; text-align: center;}
+    .travelSmart a:hover, .travelSmart a:focus {background-color: #000; color: #fff;}
 
     /* Footer */
     footer {display: grid; grid-template-columns: 1.5fr 2fr 1fr; padding: 80px 110px;}
