--- a/css/main.css
+++ b/css/main.css
@@ -26,15 +26,15 @@
     #searchButton:focus {outline-color: #fff;}
 
     /* Greek History */
-    .tours {display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 0 15px; padding: 80px 110px; background-color: #EDF3EF;}
+    .tours {display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 0 15px; padding: 80px 110px 94px; background-color: #EDF3EF;}
     .tours section {text-align: center;}
     .tours .image {display: block; min-height: 200px;}
     #greekHistoryPhoto {background-image: url(../layout2-assets/greek-history.webp);}
     #santoriniPhoto {background-image: url(../layout2-assets/santorini.webp);}
     #monasteryPhoto {background-image: url(../layout2-assets/greek-monastery.webp);}
     .tours h2 {color: #666; font: 700 16px/1.3 'Roboto Slab', serif; margin-top: 24px;}
-    .tours p {padding: 0 18px; margin: 0;}
-    .tours img {margin: 15px auto;}
+    .tours p {padding: 0 19px; margin: 0 0 15px;}
+    .tours img {width: 19px; height: 19px;}
 
     /* Quote */
     .quote blockquote {color: #666; font: 700 34px/1.3 'Arima Madurai'; width: 80%; padding: 80px 0; text-align: center; margin: 0 auto;}
@@ -61,6 +61,7 @@
     footer ul a:hover, footer ul a:focus {color: #000;}
     #emailField {border: 1px solid #000; padding: 5px; width: 96.5%;}
     #emailButton {color: #fff; background-color: #448CCB; padding: 5px 15px; cursor: pointer; margin-top: 13px; border: 1px solid black;}
+    #emailButton:hover, #emailButton:focus {background-color: #000;}
     footer aside {text-align: right; display: grid; justify-content: right; grid-template-rows: repeat(2, 1fr); gap: 20px 0;}
     footer aside a {background-image: url(../layout2-assets/twitter-logo.png); max-height: 50px; display: block; width: 60px; justify-self: end; margin: 0;} 
     footer aside p {margin: 0;}
