updated print styling to hide #jump

--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,7 @@
 }
 
 @media print {
-    h1, input, button, img, .greekToursNav, .mailList {display: none;}
+    #jump, h1, input, button, img, .greekToursNav, .mailList {display: none;}
 
     body {font-size: 17pt;}
     h2 {font-size: 24pt;}
