Tweaked 600px styling

--- a/css/main.css
+++ b/css/main.css
@@ -92,12 +92,15 @@
 
 @media screen and (max-width: 600px) {
 
-    #searchField {width: 63%;}
+    
     .tours, .travelSmart, footer {padding-top: 50px; padding-bottom: 50px;}
+    #searchField {width: 63%;}
+    .tours {padding-bottom: 66px;}
     .exploreCafe {display: grid; grid-template-rows: auto; justify-content: center; align-content: center;}
     .exploreCafe a {position: static;}
     .travelSmart {grid-template-columns: 1fr; grid-template-rows: auto repeat(4, 1fr); padding-bottom: 45px;}
     .travelSmart h2 {grid-column: 1 / 2;}
+    #emailField {width: 97%;}
 
 }
 
