--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @media all {
 
-    body {font: 400 14px/1.3 'Roboto', sans-serif; color: #000;}
+    body {font: 400 14px/1.3 'Roboto', sans-serif; color: #000; margin: 0; padding: 0;}
     .container {width: 1000px; margin: 0 auto;}
 
 }
